feat: Deletes a pokémon card from the backend
